# onie-sai

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  td3-s5212f-25g.config.bcm
.github/workflows/: ci.yaml  release-on-tags.yaml
docs/: DEVELOPMENT.md  README.md  SONiC-SAI-INTERACTION.md  asic_state-1.json  asic_state-2.json  config_db.json  dump-data-after-start  more_debug.txt  port_config.json  sfp-ports.md  sonic-more_debug_info.txt  sonic-redis-debug1.txt  sonic-redis-debug4.txt  sonic-system-state-debug
docs/debug-7726/: asic_state.json  media_settings.json
docs/pcap/: README.md  lldp-systemd-networkd.pcap  lldp.pcap
etc/bcm/: LICENSE  alibaba-td4-port.yml  bcm56880_a0-generic-128x100.yml  bcm56880_a0-generic-32x400.config.yml  config-ramon-for_jr2cp_voq.bcm  config-ramon.bcm  eapp_config.json  fb_related_config.bcm  hx4-cel-hbtn-48x1G+4x10G.config.bcm  hx5-as4630-48x1G+4x25G+2x100G.config.bcm  hx5-svk-23x10G+2x40G+4x50G.config.bcm  hx5_n3248te.config.bcm  jr2-a7280cr3-32p4-40x100G.config.bcm  jr2-silverstone-dp-24x100G_6x400G.config.bcm  jr2-silverstone-dp-24x100G_6x400G_VOQ_.config.bcm  jr2_negev_A-tag.bcm  jr2_negev_revB.bcm  jr2_negev_revB_64_pp_dsp_per_core.bcm  jr2_svk_4x10G+1x100G+1x400G.lc.config.bcm  jr2_svk_4x10G+1x100G+1x400G.mgr.config.bcm  jr2cp_negev_revA.bcm  jr2cp_svk_8x10G_2x100G_2x400G.config.bcm  jr2cp_svk_8x10G_2x100G_2x400G.voq.config.bcm  s6100-line-cards-reset.sh  td2-as5712-6x40G.config.bcm  td2-s6000-24x40G+32x10G-bkout.bcm  td2-s6000-24x40G+32x10G.config.bcm  td2-s6000-32x40G.config.bcm  td2_3164_0.bcm  td2_3164_1.bcm  td2_3164_2.bcm  td2_3164_3.bcm  td2_3164_4.bcm  td2_3164_5.bcm  td3-a7050cx3-32s-32x100G.config.bcm  td3-as7326-riot_48x10G+8x100G.config.bcm  td3_48x25g_8x100g-config.bcm  td3_64x10g_16x25g_12x100g-config.bcm  td3_ix8_10Gx48_40Gx8.config.bcm  td3_msft_t1_ix8_10Gx48_40Gx8.config.bcm  (+60 more)
etc/bcm/flex/bcm56870_a0_premium_issu/: default
etc/bcm/flex/bcm56870_a0_premium_issu/b870.6.4.1/: bcm56870_a0_cch.pkg  bcm56870_a0_ceh.pkg  bcm56870_a0_cfh.pkg  bcm56870_a0_cih.pkg  bcm56870_a0_cmh.pkg
etc/bcm/led/cmicd/: Makefile  dummy.asm  locator.asm
etc/bcm/led/cmicx/: Makefile  custom_led.lds  dummy.c  locator.c  port_locator.c
include/: s5212.h
include/sai/experimental/: saibridgeextensions.h  saibufferextensions.h  saidebugcounterextensions.h  saiexperimentalvlanstack.h  saiextensions.h  saifdbextensions.h  saihostifextensions.h  saiipmcextensions.h  saiipmcgroupextensions.h  sainexthopextensions.h  sainexthopgroupextensions.h  saipolicerextensions.h  saiportextensions.h  sairouterinterfaceextensions.h  saiswitchextensions.h  saitypesextensions.h  saivlanextensions.h
include/xcvr/: xcvr.h
lib/: libsaimetadata.so.0  libsaimetadata.so.0.0.0
onie-lldp/: Cargo.toml
onie-lldp/src/: main.rs  onie_lldpctl.rs  onie_lldpd.rs
onie-lldp/src/onie_lldpd/: processor.rs  rpc.rs
onie-lldp/src/onie_lldpd/processor/: netlink.rs
onie-sai/: Cargo.toml
onie-sai-common/: Cargo.toml
onie-sai-common/src/: lib.rs
onie-sai-rpc/: Cargo.toml  build.rs
onie-sai-rpc/protos/: onie-sai.proto
onie-sai-rpc/src/: lib.rs
onie-sai/src/: main.rs
onie-saictl/: Cargo.toml
onie-saictl/src/: lib.rs  main.rs
onie-said/: Cargo.toml  build.rs
onie-said/src/: lib.rs  lldp.rs  main.rs  oniesai.rs  processor.rs  rpc.rs
onie-said/src/oniesai/: netlink.rs  port.rs
onie-said/src/oniesai/port/: sm.rs
onie-said/src/oniesai/port/discovery/: logicalport.rs  physicalport.rs
onie-said/src/processor/: netlink.rs  port.rs
onie-said/src/processor/port/discovery/: logicalport.rs  mod.rs  physicalport.rs
poc/: Makefile  README.md
poc/include/: s5212.h
poc/src/: main.c  port_main.c
sai/: Cargo.toml  build.rs
sai-sys/: Cargo.toml  build.rs  wrapper.h
sai-sys/src/: lib.rs
sai/src/: bridge.rs  hostif.rs  lib.rs  port.rs  route.rs  router_interface.rs  switch.rs  virtual_router.rs  vlan.rs
sai/src/bridge/: port.rs
sai/src/hostif/: table_entry.rs  trap.rs  trap_group.rs  user_defined_trap.rs
sai/src/vlan/: member.rs
saictl-skel/etc/: config.bcm  sai_preinit_cmd.soc
saictl-skel/lib/: libprotobuf.so.10
saictl-skel/lib/cancun/: bcm56370_a0_cch.pkg  bcm56370_a0_ceh.pkg  bcm56370_a0_cfh.pkg  bcm56370_a0_cih.pkg  bcm56370_a0_cmh.pkg  bcm56770_a0_cch.pkg  bcm56770_a0_ceh.pkg  bcm56770_a0_cfh.pkg  bcm56770_a0_cih.pkg  bcm56770_a0_cmh.pkg  bcm56870_a0_cch.pkg  bcm56870_a0_ceh.pkg  bcm56870_a0_cfh.pkg  bcm56870_a0_cih.pkg  bcm56870_a0_cmh.pkg
said/: Cargo.toml
said/src/: main.rs
src/: main.c
xcvr/: Cargo.toml
xcvr-cel-seastone2/: Cargo.toml
xcvr-cel-seastone2/src/: common.rs  lib.rs
xcvr-cel-silverstone/: Cargo.toml
xcvr-cel-silverstone/src/: lib.rs
xcvr-dell-s5200/: Cargo.toml
xcvr-dell-s5200/src/: common.rs  lib.rs  s5212.rs  s5224.rs  s5232.rs  s5248.rs  s5296.rs
xcvr-pddf/: Cargo.toml
xcvr-pddf/src/: common.rs  lib.rs
xcvr-sys/: Cargo.toml  build.rs  wrapper.h
xcvr-sys/src/: lib.rs
xcvr/src/: lib.rs
xcvrctl/: Cargo.toml
xcvrctl/src/: lib.rs  main.rs
