[package]
name = "onie-lldp"
version = "0.1.8"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
thiserror = "1.0.49"
clap = { version = "4.4.5", features = ["derive", "string"] }
log = "0.4.20"
env_logger = "0.10.0"
onie-sai-common = { version = "0.1.8", path = "../onie-sai-common" }
ttrpc = "0.8.1"
onie-sai-rpc = { version = "0.1.8", path = "../onie-sai-rpc" }
ctrlc = { version = "3.4.1", features = ["termination"] }
ipnet = "2.8.0"
macaddr = "1.0.1"
etherparse = "0.13.0"
url = "2.4.1"
libc = "0.2.149"
netlink-sys = "0.8.5"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.17.1"
netlink-packet-utils = "0.5.2"
