[package]
name = "onie-said"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.5", features = ["derive", "string"] }
log = "0.4.20"
env_logger = "0.10.0"
ipnet = "2.8.0"
macaddr = "1.0.1"
sai = { version = "0.1.0", path = "../sai" }
ttrpc = "0.8.1"
onie-sai-rpc = { version = "0.1.0", path = "../onie-sai-rpc" }
ctrlc = { version = "3.4.1", features = ["termination"] }
thiserror = "1.0.49"
xcvr = { version = "0.1.0", path = "../xcvr" }
