[package]
name = "onie-said"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.151"
ctrlc = { version = "3.4.1", features = ["termination"] }
anyhow = "1.0.75"
thiserror = "1.0.49"
clap = { version = "4.4.5", features = ["derive", "string"] }
log = "0.4.20"
env_logger = "0.10.0"
ipnet = "2.8.0"
macaddr = "1.0.1"
sai = { version = "0.1.6", path = "../sai" }
xcvr = { version = "0.1.6", path = "../xcvr" }
ttrpc = "0.8.1"
onie-sai-rpc = { version = "0.1.6", path = "../onie-sai-rpc" }
onie-sai-common = { version = "0.1.6", path = "../onie-sai-common" }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
netlink-sys = "0.8.5"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.17.1"
netlink-packet-utils = "0.5.2"
etherparse = "0.13.0"
url = "2.4.1"
