[package]
name = "xcvr-pddf"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
xcvr-sys = { version = "0.1.5", path = "../xcvr-sys" }
# log = "0.4.20"
# env_logger = "0.10.0"
memmap = "0.7.0"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
