[package]
name = "xcvrctl"
version = "0.1.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
xcvr = { version = "0.1.6", path = "../xcvr" }
log = "0.4.20"
env_logger = "0.10.2"
clap = { version = "4.4.5", features = ["derive", "string"] }
onie-sai-common = { version = "0.1.6", path = "../onie-sai-common" }
